--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
+    "@types/node": "^22.13.11",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
