--- a/server/package.json
+++ b/server/package.json
@@ -3,19 +3,21 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch index.ts"
+    "dev": "tsx watch index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "typescript": "^5.3.3",
+    "tsx": "^4.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "@types/socket.io": "^3.0.2",
-    "@types/uuid": "^9.0.8",
-    "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "@types/uuid": "^9.0.8"
   }
 } 
