--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:client": "vite --port 5175",
     "dev:server": "cd server && npm run dev",
     "build": "tsc && vite build",
+    "postbuild": "cp dist/index.html dist/404.html",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
