--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.4",
-    "uuid": "^9.0.1",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
-    "tsx": "^4.7.1"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -20,4 +22,4 @@
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^9.0.8"
   }
-} 
+}
