--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "tsc && cp package.json dist/",
+    "start": "cd dist && node index.js",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -21,5 +22,8 @@
     "@types/node": "^20.11.24",
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^9.0.8"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
