Update server configuration for production deployment

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,8 +9,10 @@
     "outDir": "dist",
     "rootDir": ".",
     "allowJs": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "sourceMap": false
   },
   "include": ["*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 } 
