--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch index.ts",
-    "build": "tsc && cp package.json dist/",
-    "start": "cd dist && node index.js",
+    "clean": "rm -rf dist",
+    "copy-files": "cp package*.json dist/",
+    "build": "npm run clean && tsc && npm run copy-files",
+    "start": "node index.js",
     "postinstall": "npm run build"
   },
   "dependencies": {
