--- a/server/package.json
+++ b/server/package.json
@@ -5,25 +5,25 @@
   "scripts": {
     "dev": "tsx watch index.ts",
     "clean": "rm -rf dist",
-    "copy-files": "cp package*.json dist/",
-    "build": "npm run clean && tsc && npm run copy-files",
-    "start": "node index.js",
+    "copy-files": "mkdir -p dist && cp package*.json dist/",
+    "prebuild": "npm run clean",
+    "build": "tsc",
+    "postbuild": "npm run copy-files",
+    "start": "node dist/index.js",
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.4",
-    "uuid": "^9.0.1",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.1",
-    "cors": "^2.8.5",
-    "@types/cors": "^2.8.17"
-  },
-  "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "@types/socket.io": "^3.0.2",
-    "@types/uuid": "^9.0.8"
+    "@types/uuid": "^9.0.8",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.4",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
